// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StarRating /> should match snapshot for small size 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_none__7o6k06eh"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_position_relative__7o6k06el useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_wrap__7o6k06fy useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y4c useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxqc"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06c useBoxStyles_makeResponsiveStyle_key_bp__7o6k063o useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_position_relative__7o6k06el useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_wrap__7o6k06fy useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y410 useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxq10"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q60 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q60 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q60 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q60 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q60 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530 StarRating_star_empty__feoh531"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06c useBoxStyles_makeResponsiveStyle_key_bp__7o6k063o useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06eh useBoxStyles_textAlign_left__7o6k06em useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_3__w6to7i3"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<StarRating /> should match snapshot with label 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_none__7o6k06eh"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_position_relative__7o6k06el useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_wrap__7o6k06fy useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y4c useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxqc"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06c useBoxStyles_makeResponsiveStyle_key_bp__7o6k063o useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_position_relative__7o6k06el useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_wrap__7o6k06fy useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y410 useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxq10"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530 StarRating_star_empty__feoh531"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06c useBoxStyles_makeResponsiveStyle_key_bp__7o6k063o useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06eh useBoxStyles_textAlign_left__7o6k06em useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<StarRating /> should match snapshot with value 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_none__7o6k06eh"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_position_relative__7o6k06el useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_wrap__7o6k06fy useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y4c useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxqc"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06c useBoxStyles_makeResponsiveStyle_key_bp__7o6k063o useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_position_relative__7o6k06el useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_wrap__7o6k06fy useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y410 useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxq10"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 15.396V6.095l1.71 4.036 4.38.376-3.323 2.878.995 4.281M22 9.244l-7.19-.617L11.998 2 9.19 8.627 2 9.244l5.454 4.726L5.82 21 12 17.272 18.18 21l-1.635-7.03L22 9.244z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530 StarRating_star_empty__feoh531"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530 StarRating_star_empty__feoh531"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06c useBoxStyles_makeResponsiveStyle_key_bp__7o6k063o useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06eh useBoxStyles_textAlign_left__7o6k06em useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
      >
        2.7
      </span>
    </div>
  </div>
</div>
`;

exports[`<StarRating /> should match snapshot without value 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_none__7o6k06eh"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_position_relative__7o6k06el useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_wrap__7o6k06fy useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y4c useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxqc"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06c useBoxStyles_makeResponsiveStyle_key_bp__7o6k063o useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_position_relative__7o6k06el useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_wrap__7o6k06fy useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y410 useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxq10"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530 StarRating_star_empty__feoh531"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530 StarRating_star_empty__feoh531"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530 StarRating_star_empty__feoh531"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530 StarRating_star_empty__feoh531"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
        >
          <i
            class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_none__7o6k06eh Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_relative__7o6k06el StarRating_star_default__feoh530 StarRating_star_empty__feoh531"
            role="presentation"
          >
            <svg
              class="useBoxStyles_display_block__7o6k06eu useBoxStyles_width_full__7o6k06eg useBoxStyles_height_full__7o6k06ei"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17.27l6.18 3.728-1.636-7.03L22 9.244l-7.19-.618L12 1.999 9.19 8.625 2 9.243l5.454 4.726-1.635 7.029L12 17.27z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06c useBoxStyles_makeResponsiveStyle_key_bp__7o6k063o useBoxStyles_display_flex__7o6k06ev useBoxStyles_width_none__7o6k06eh useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ff useBoxStyles_flexWrap_nowrap__7o6k06fz"
    >
      <span
        class="reset_inlineText__6swfds2 useBoxStyles_width_none__7o6k06eh useBoxStyles_textAlign_left__7o6k06em useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4"
      />
    </div>
  </div>
</div>
`;
